--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "API project for freeCodeCamp",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "dependencies": {
+    "accepts": "^1.3.8",
     "cors": "^2.8.1",
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.6.0",
     "express": "^4.18.1"
   },
   "repository": {
